# HCP_SAT

./: .gitignore  benchmark_report.txt  cube_and_conquer.py  find_optimal_lfsr.py  log-file.txt  requirements.txt  run_benchmarks.sh  run_crt_benchmarks.py  run_fhcppp_benchmark.sh  run_timeout_pruning.py  setup_and_run.sh  test_lfsr.py
benchmark/: fhcpcs_phases_report.txt  fhcpcs_vccrt_report.txt  pruning_vs_crt_graph48_report.txt
docs/: hcp_sat_final_report.md
scratch/: run_custom.py  run_opt.py  run_test_lfsr.py  run_test_lfsr_2.py  run_trim.py  test_graph48.py
src/: compare_hcp.py  compare_successors.py  log-file.txt  solver.py  test_hcp.py  test_nqueens.py
src/cpp/: hcp_solver.cpp
src/docs/: preprocessing_design.md
src_cpp/: CMakeLists.txt  compare_hcp.cpp  compare_successors.cpp  solver.cpp  solver.hpp  test_hcp.cpp  test_uf  test_uf.cpp  test_uf2  test_uf2.cpp  test_uf3  test_uf3.cpp  test_uf4  test_uf4.cpp  test_uf5  test_uf5.cpp
src_cpp/libs/encodings/cardinality_one/: BimanderEncoder.hpp  BinaryEncoder.hpp  BinomialEncoder.hpp  CardinalityOneEncoder.hpp  CommanderEncoder.hpp  HeuleEncoder.hpp  HybridEncoder.hpp  NSCEncoding.hpp  PbLibEncoder.hpp  ProductEncoder.hpp  SequentialEncoder.hpp
src_cpp/libs/models/: NQueensModel.hpp
src_cpp/libs/models/successor/: BinaryAdder.hpp  BinaryAdderOriginal.hpp  CRT.hpp  IncCRT.hpp  IncOCRT.hpp  IncPruningCRT.hpp  LFSR.hpp  OCRT.hpp  OUnary.hpp  OptimizedCRT.hpp  PruningCRT.hpp  SuccessorMethod.hpp  Unary.hpp  Vee.hpp
src_cpp/libs/utils/: CNF.hpp  Common.hpp  EncodingContext.hpp  Graph.hpp  VarPool.hpp
(+617 files in other folders)
